@@ -1,3 +1,15 @@
+2007-12-20T1649  C.J. Adams-Collier  <cjac@colliertech.org>
+
+	Overview (from Sam Hocevar): The gtkglarea-sharp build process
+	expects a Tao.OpenGl.pc file, but such a file doesn't exist
+	anywhere AFAIK. The Tao Debian packages use tao-opengl.pc for
+	consistency so I suggest using the same naming scheme
+	(see also http://www.taoframework.com/node/432 for a discussion
+	with the Tao maintainers about this).
+
+	* configure.ac, examples/Include.am, examples/lwo/Makefile.am
+	- s/Tao.OpenGl/tao-opengl/g
+	
 2007-12-20T1642  C.J. Adams-Collier  <cjac@colliertech.org>
 
 	Overview: Applied some patches supplied by Sam Hocevar
